# xiplot

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .gitpod.yml  Brotli-1.0.9-cp310-cp310-emscripten_3_1_14_wasm32.whl  CITATIONS.bib  Flask-2.1.2-py3-none-any.whl  Flask_Caching-2.0.0-py3-none-any.whl  Flask_Compress-1.12-py3-none-any.whl  Jinja2-3.1.2-py3-none-any.whl  LICENSE-BSD3  LICENSE-MIT  MANIFEST.in  Makefile  MarkupSafe-2.1.1-cp310-cp310-emscripten_3_1_14_wasm32.whl  PIL-9.1.1-cp310-cp310-emscripten_3_1_14_wasm32.whl  README.md  TODO  Werkzeug-2.1.2-py3-none-any.whl  attrs-21.4.0-py2.py3-none-any.whl  bootstrap.py  bundle.py  cachelib-0.9.0-py3-none-any.whl  click-8.1.3-py3-none-any.whl  cmds  cycler-0.11.0-py3-none-any.whl  dash_daq-0.5.0-py3-none-any.whl  dash_extensions-0.1.4-py3-none-any.whl  dash_mantine_components-0.10.2-py3-none-any.whl  dashapp-0.1.0-py3-none-any.whl  dashapp.0eddb672.js  dashapp.0eddb672.js.map  dashapp.289e690e.js  dashapp.289e690e.js.map  dashapp.e80e8c74.js  dashapp.e80e8c74.js.map  distutils.tar  fonttools-4.33.3-py3-none-any.whl  index.html  index.py  (+79 more)
.github/workflows/: gh-pages.yaml  publish.yaml  pytest.yaml  style.yaml  test-build.yaml
_dash-component-suites/dash/dash_table/: async-export.v5_1_3.js  async-export.v5_1_5.js  async-export.v5_1_6.js  async-highlight.v5_1_3.js  async-highlight.v5_1_5.js  async-highlight.v5_1_6.js  async-table.v5_1_3.js  async-table.v5_1_5.js  async-table.v5_1_6.js  bundle.v5_1_3.js  bundle.v5_1_5.js  bundle.v5_1_6.js
_dash-component-suites/dash/dcc/: async-datepicker.v2_5_0.js  async-datepicker.v2_6_1.js  async-datepicker.v2_6_2.js  async-dropdown.v2_5_0.js  async-dropdown.v2_6_1.js  async-dropdown.v2_6_2.js  async-graph.v2_5_0.js  async-graph.v2_6_1.js  async-graph.v2_6_2.js  async-highlight.v2_5_0.js  async-highlight.v2_6_1.js  async-highlight.v2_6_2.js  async-markdown.v2_5_0.js  async-markdown.v2_6_1.js  async-markdown.v2_6_2.js  async-slider.v2_5_0.js  async-slider.v2_6_1.js  async-slider.v2_6_2.js  async-upload.v2_5_0.js  async-upload.v2_6_1.js  async-upload.v2_6_2.js  dash_core_components-shared.v2_5_0.js  dash_core_components-shared.v2_6_1.js  dash_core_components-shared.v2_6_2.js  dash_core_components.v2_5_0.js  dash_core_components.v2_6_1.js  dash_core_components.v2_6_2.js
_dash-component-suites/dash/html/: dash_html_components.v2_0_3.min.js  dash_html_components.v2_0_5.min.js
_dash-component-suites/dash_daq/: async-colorpicker.v0_5_0.js  async-slider.v0_5_0.js  dash_daq.v0_5_0.min.js
_dash-component-suites/dash_extensions/: async-lottie.v0_1_4.js  async-lottie.v0_1_4.js.map  async-mermaid.v0_1_4.js  async-mermaid.v0_1_4.js.map  dash_extensions.v0_1_4.min.js  dash_extensions.v0_1_4.min.js.map
_dash-component-suites/dash_mantine_components/: dash_mantine_components.v0_10_2.min.js
_dash-component-suites/dash_uploader/_build/: dash_uploader.v0_5_0.min.js  dash_uploader.v0_5_0.min.js.map
assets/: RDKit_minimal.js?m=1660032519.254889.map  data.ls  dcc_style.css  html_components.css  plugins.ls  stylesheet.css
dashapp/: __main__.py  app.py  setup.py
dashapp/assets/: stylesheet.css
dashapp/graphs/: __init__.py  barplot.py  heatmap.py  histogram.py  scatterplot.py  smiles.py  table.py
dashapp/plots/: __init__.py  barplot.py  heatmap.py  histogram.py  scatterplot.py  smiles.py  table.py
dashapp/services/: dash.py  dash_layouts.py  data_frame.py  dataframe.py  graphs.py  slisemap_reader.py
dashapp/tabs/: __init__.py  cluster.py  data.py  plots.py
dashapp/ui/: dash_callbacks.py  dash_renderer.py
dashapp/utils/: cluster.py  dataframe.py  dcc.py  layouts.py  scatterplot.py  smiles.py  store.py  table.py
data/: Stuke-AA.json  Stuke-OE62.json  Stuke-QM9.json  Wang-Slisemap-PCA50.sm  Wang-dataframe.tar  Wang-df.csv  auto-mpg.csv  autompg-B.csv  autompg.csv
docs/: README.md
docs/user_guide/: README.md  clustering.md  data_files.md  plots.md  plugin.md  plugin_read.md
documents/user_guide/: plots.md
patches/: bootstrap.py  bundle-dash-app.py  bundle-dashapp.py  dashapp.patch  install.py  pyodide.patch
plugin_xiplot_filetypes/: README.md  pyproject.toml
plugin_xiplot_filetypes/xiplot_filetypes/: __init__.py
plugins/: xiplot_filetypes-1.0-py3-none-any.whl
services/: cmd_app.py  dash.py  dash_app.py  dash_layouts.py  data_frame.py  graphs.py  main_dash.py  slisemap_reader.py
src/: dashapp.ts  dev-server.js  flask.ts  index.html  manager.ts  webdash.ts  webflask.ts  worker-loader.ts  worker.js  worker.ts
src/dash_app/: cross_filtering_app.ts  dashapp.ts  simple_dash_app.ts
test_plugin/: pyproject.toml
test_plugin/xiplot_test_plugin/: __init__.py
tests/: conftest.py  test_action.py  test_barplot.py  test_boxplot.py  test_data.py  test_distplot.py  test_filetypes.py  test_heatmap.py  test_histogram.py  test_launch.py  test_lazyload.py  test_lineplot.py  test_plugin.py  test_scatterplot.py  test_smiles.py  test_table.py  test_utils.py  util_test.py
ui/: cmd_renderer.py  dash_callbacks.py  dash_renderer.py
user_guide/: data_files.md
xaiplot/: __main__.py  app.py  setup.py
xaiplot/plots/: barplot.py  heatmap.py  histogram.py  scatterplot.py  smiles.py  table.py
xaiplot/tabs/: cluster.py  data.py  plots.py
xaiplot/utils/: layouts.py  smiles.py
xiplot/: __init__.py  __main__.py  app.py  plugin.py  setup.py
xiplot/assets/: dcc_style.css  html_components.css  stylesheet.css
xiplot/plots/: __init__.py  barplot.py  boxplot.py  distplot.py  heatmap.py  histogram.py  lineplot.py  scatterplot.py  smiles.py  table.py
xiplot/tabs/: cluster.py  data.py  embedding.py  plots.py  plugins.py  settings.py
xiplot/utils/: __init__.py  auxiliary.py  callbacks.py  cli.py  cluster.py  components.py  dataframe.py  dcc.py  embedding.py  io.py  layouts.py  regex.py  smiles.py  table.py
