[project]
name = "dashapp"
version = "0.1.0"

[dependencies]
dash = "^2.5.1"
dash-daq = "^0.5.0"
dash-extensions = "^0.1.4"
dash-mantine-components = "^0.10.2"
flask = "^2.1.2"
jsonschema = "^4.6.0"
pandas = "^1.4.2"
plotly = "^5.9.0"
# LAZY: scikit-learn = "^1.1.1"
# LAZY: sklearn = "^0.0"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dashapp*"]
exclude = []
namespaces = true
