[project]
name = "xiplot"
version = "0.2.0"
authors = [
    { name="Akihiro Tanaka", email="akihiro.fin@gmail.com" },
    { name="Juniper Tyree", email="juniper.tyree@helsinki.fi" },
    { name="Anton Björklund" },
    { name="Jarmo Mäkelä" },
]
description = "Interactive data visualization tool"
license = { file = "LICENSE-MIT" }
readme = "README.md"
requires-python = ">=3.7"
keywords = ["Visalisation", "Virtual Laboratory", "Exploratory Data Analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "dash ~= 2.6.1",
    "dash-daq ~= 0.5.0",
    "dash-extensions == 0.1.4",
    "dash-mantine-components ~= 0.10.2",
    "dash-uploader ~= 0.6.0; platform_system!='Wasm'",
    "flask <= 2.1.2",
    "jsonschema ~= 4.6.0",
    "kaleido ~= 0.2.1; platform_system!='Wasm'",
    "pandas ~= 1.4.2",
    "plotly ~= 5.9.0",
    "pyarrow ~= 11.0.0; platform_system!='Wasm'",
    "scikit-learn >= 1.1.1; platform_system!='Wasm'",
]

[project.optional-dependencies]
dev = ["pytest", "black", "dash[testing]", "webdriver-manager", "selenium"]

[project.urls]
homepage = "https://github.com/edahelsinki/xiplot"
repository = "https://github.com/edahelsinki/xiplot.git"

[project.scripts]
xiplot = "xiplot:cli"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["xiplot*"]
exclude = ["tests", "test_plugin"]
namespaces = true
