[project]
name = "xiplot"
version = "0.4.1"
authors = [
    { name = "Akihiro Tanaka", email = "akihiro.fin@gmail.com" },
    { name = "Juniper Tyree", email = "juniper.tyree@helsinki.fi" },
    { name = "Anton Björklund" },
    { name = "Jarmo Mäkelä" },
]
description = "Interactive data visualization tool"
license = { file = "LICENSE-MIT" }
readme = "README.md"
requires-python = ">=3.7"
keywords = ["Visalisation", "Virtual Laboratory", "Exploratory Data Analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "dash == 2.6.2",
    "dash-extensions == 0.1.4",
    "dash-mantine-components == 0.10.2",
    "dash-uploader ~= 0.6.0; platform_system!='Emscripten'",
    "jsonschema ~= 4.6.0; platform_system!='Emscripten'",
    "kaleido ~= 0.2.1; platform_system!='Emscripten'",
    "pandas >= 1.4.0, < 2.0.0",
    "plotly >= 5.9.0",
    "scikit-learn >= 1.0; platform_system!='Emscripten'",
    "xiplot_filetypes == 1.0; platform_system!='Emscripten'",
    "Werkzeug < 3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "dash[testing]",
    "isort",
    "pyproject-flake8",
    "webdriver-manager",
    "selenium",
    "IPython",
]

[project.urls]
homepage = "https://github.com/edahelsinki/xiplot"
repository = "https://github.com/edahelsinki/xiplot.git"

[project.scripts]
xiplot = "xiplot:cli"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["xiplot", "xiplot.*"]

[tool.black]
target-version = ['py37']
line-length = 79
preview = true

[tool.isort]
py_version = 37
profile = "black"
line_length = 79

[tool.flake8]
max-line-length = 88
exclude = "build/*"
