
[project]
name = "xiplot_filetypes"
version = "1.0"
authors = [{ name = "Anton Björklund", email = "anton.bjorklund@helsinki.fi" }]
description = "Xiplot plugin for additional file types"
license = { file = "../LICENCE-MIT" }
readme = "README.md"

requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "pyarrow >= 11.0.0; platform_system!='Emscripten'",
    "fastparquet; platform_system=='Emscripten'",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xiplot_filetypes"]

[project.urls]
homepage = "https://github.com/edahelsinki/xiplot"
repository = "https://github.com/edahelsinki/xiplot.git"

[project.entry-points."xiplot.plugin.read"]
parquet-read = "xiplot_filetypes:read_parquet"
feather-read = "xiplot_filetypes:read_feather"

[project.entry-points."xiplot.plugin.write"]
parquet-write = "xiplot_filetypes:write_parquet"
feather-write = "xiplot_filetypes:write_feather"
