
[project]
name = "xiplot_test_plugin"
version = "0.1.1"

dependencies = ["pandas"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["xiplot_test_plugin"]
exclude = []
namespaces = true

[project.entry-points."xiplot.plugin.read"]
test-plugin-read = "xiplot_test_plugin:plugin_load"

[project.entry-points."xiplot.plugin.write"]
test-plugin-write = "xiplot_test_plugin:plugin_write"

[project.entry-points."xiplot.plugin.global"]
test-plugin-global = "xiplot_test_plugin:create_global"

[project.entry-points."xiplot.plugin.callback"]
test-plugin-callback = "xiplot_test_plugin:register_callbacks"

[project.entry-points."xiplot.plugin.plot"]
test-plugin-plot = "xiplot_test_plugin:Plot"
